Feat/backend: doc-services, chat-services (#13) (#14)
* Disable CORS

* Cross Origin service-account

* Script to generate SSL

* Add authorization filter

* Fix bugs: reconfigure static resources after used @EnableWebMvc

* Realtime chat & external resources

* Fix timezone

* DESC query messages

* Add Contact APIs & role USER -> EMPLOYEE

* Enable CORS for all services

* Add document service and config nginx